# svim

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  svim.cabal  svim.hi  svim.hs  todo.txt
app/: svim.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Config.hs  Core.hs  Menu.hs  test.hs
