cabal-version: 2.4
name: svim
version: 0.1.0.0
build-type: Simple

executable svim
  main-is: svim.hs
  build-depends:
    base >=4.14 && <4.16,
    yaml >=0.11 && <0.12,
    utf8-string >= 1.0 && <1.1,
    bytestring >= 0.10 && <0.11,
    directory >= 1.3 && <1.4,
    process >= 1.6 && <1.7,
    split >= 0.2 && <0.3

