cabal-version:      2.4
name:               svim
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             AlexScriba
maintainer:         61542302+AlexScriba@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable svim
    main-is: svim.hs

    -- Modules included in this executable, other than Main.
    other-modules: 
      Menu,
      Core

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
      base ^>=4.14.3.0,
      yaml >=0.11 && <0.12,
      utf8-string >= 1.0 && <1.1,
      bytestring >= 0.10 && <0.11,
      directory >= 1.3 && <1.4,
      process >= 1.6 && <1.7,
      split >= 0.2 && <0.3,
      brick >= 1.7,
      vty,
      template-haskell,
      microlens,
      microlens-th,
      microlens-mtl,
      mtl
    hs-source-dirs: app, src
    default-language: Haskell2010
    ghc-options:
      -threaded
